Create entrypoints as module with its own submodules

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <module>core</module>
         <module>dataproviders/jpa-repository</module>
         <module>dataproviders/simple-java-repository</module>
-        <module>entrypoints/simple-java-client</module>
+        <module>entrypoints</module>
     </modules>
     <packaging>pom</packaging>
 
