--- a/entrypoints/rest-api/pom.xml
+++ b/entrypoints/rest-api/pom.xml
@@ -1,20 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>designpatterns-project</artifactId>
+        <artifactId>entrypoints</artifactId>
         <groupId>io.github.maciejbiela.designpatterns-project</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>entrypoints</artifactId>
-    <modules>
-        <module>simple-java-client</module>
-        <module>rest-api</module>
-    </modules>
-    <packaging>pom</packaging>
+    <artifactId>rest-api</artifactId>
+    <packaging>jar</packaging>
 
-    <name>entrypoints</name>
+    <name>rest-api</name>
     <url>http://maciejbiela.github.io</url>
 
     <properties>
@@ -23,8 +19,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.github.maciejbiela.designpatterns-project</groupId>
-            <artifactId>core</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
+
 </project>
