--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.maven-compiler-plugin>3.5.1</version.maven-compiler-plugin>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <version.hibernate.core>5.1.0.Final</version.hibernate.core>
+        <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
+        <maven-compiler.source>1.8</maven-compiler.source>
+        <maven-compiler.target>1.8</maven-compiler.target>
+        <hibernate-core.version>5.1.0.Final</hibernate-core.version>
+        <spring-boot-starter-web.version>1.3.5.RELEASE</spring-boot-starter-web.version>
     </properties>
 
     <build>
@@ -29,10 +30,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${version.maven-compiler-plugin}</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
+                    <source>${maven-compiler.source}</source>
+                    <target>${maven-compiler.target}</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -51,9 +52,14 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring-boot-starter-web.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
-                <version>${version.hibernate.core}</version>
+                <version>${hibernate-core.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
