--- a/entrypoints/pom.xml
+++ b/entrypoints/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>simple-java-client</module>
         <module>rest-api</module>
+        <module>contract</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -21,10 +22,4 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>io.github.maciejbiela.designpatterns-project</groupId>
-            <artifactId>core</artifactId>
-        </dependency>
-    </dependencies>
 </project>
