--- a/entrypoints/rest-api/pom.xml
+++ b/entrypoints/rest-api/pom.xml
@@ -19,6 +19,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.github.maciejbiela.designpatterns-project</groupId>
+            <artifactId>contract</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
