--- a/pom.xml
+++ b/pom.xml
@@ -49,13 +49,28 @@
             </dependency>
             <dependency>
                 <groupId>io.github.maciejbiela.designpatterns-project</groupId>
+                <artifactId>jpa-repository</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.maciejbiela.designpatterns-project</groupId>
                 <artifactId>simple-java-repository</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.github.maciejbiela.designpatterns-project</groupId>
+                <artifactId>contract</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.maciejbiela.designpatterns-project</groupId>
                 <artifactId>rest-api</artifactId>
-                <version>${project.version}</version>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.maciejbiela.designpatterns-project</groupId>
+                <artifactId>simple-java-client</artifactId>
+                <version>${project.parent.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
