--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,9 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>core</module>
-        <module>dataproviders/jpa-repository</module>
-        <module>dataproviders/simple-java-repository</module>
         <module>entrypoints</module>
         <module>configuration</module>
+        <module>dataproviders</module>
     </modules>
     <packaging>pom</packaging>
 
