--- a/dataproviders/jpa-repository/pom.xml
+++ b/dataproviders/jpa-repository/pom.xml
@@ -20,6 +20,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.github.maciejbiela.designpatterns-project</groupId>
+            <artifactId>core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
         </dependency>
