--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,9 @@
         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
         <maven-compiler.source>1.8</maven-compiler.source>
         <maven-compiler.target>1.8</maven-compiler.target>
-        <hibernate-core.version>5.1.0.Final</hibernate-core.version>
         <spring-boot-starter-web.version>1.3.5.RELEASE</spring-boot-starter-web.version>
+        <hibernate-core.version>5.1.0.Final</hibernate-core.version>
+        <h2.version>1.4.192</h2.version>
     </properties>
 
     <build>
@@ -75,6 +76,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring-boot-starter-web.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>${h2.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
