--- a/application/core/pom.xml
+++ b/application/core/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>io.github.maciejbiela.designpatterns-project</groupId>
-        <artifactId>designpatterns-project</artifactId>
+        <artifactId>application</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
