--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <maven-compiler.source>1.8</maven-compiler.source>
         <maven-compiler.target>1.8</maven-compiler.target>
         <junit.version>4.12</junit.version>
+        <hamcrest-library.version>1.3</hamcrest-library.version>
         <mockito-core.version>1.10.19</mockito-core.version>
         <assertj-core.version>3.4.1</assertj-core.version>
         <spring-boot-starter-web.version>1.3.5.RELEASE</spring-boot-starter-web.version>
@@ -43,6 +44,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>io.github.maciejbiela.designpatterns-project</groupId>
+                <artifactId>configuration</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>io.github.maciejbiela.designpatterns-project</groupId>
                 <artifactId>core</artifactId>
@@ -77,6 +83,11 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hamcrest</groupId>
+                <artifactId>hamcrest-library</artifactId>
+                <version>${hamcrest-library.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
