--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,10 @@
         <mockito-core.version>1.10.19</mockito-core.version>
         <assertj-core.version>3.4.1</assertj-core.version>
         <spring-boot-starter-web.version>1.3.5.RELEASE</spring-boot-starter-web.version>
-        <hibernate-core.version>5.2.0.Final</hibernate-core.version>
+        <spring-test.version>4.2.4.RELEASE</spring-test.version>
+        <json-io.version>4.4.0</json-io.version>
         <h2.version>1.4.192</h2.version>
+        <hibernate-core.version>5.2.0.Final</hibernate-core.version>
     </properties>
 
     <build>
@@ -103,6 +105,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring-boot-starter-web.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${spring-test.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.cedarsoftware</groupId>
+                <artifactId>json-io</artifactId>
+                <version>${json-io.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.h2database</groupId>
