--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -20,10 +20,6 @@
     <dependencies>
         <dependency>
             <groupId>io.github.maciejbiela.designpatterns-project</groupId>
-            <artifactId>configuration</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.github.maciejbiela.designpatterns-project</groupId>
             <artifactId>jpa-repository</artifactId>
         </dependency>
         <dependency>
@@ -33,22 +29,22 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.cedarsoftware</groupId>
-            <artifactId>json-io</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
