--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>application</module>
         <module>integration-tests</module>
+        <module>acceptance-tests</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -25,7 +26,6 @@
         <assertj-core.version>3.4.1</assertj-core.version>
         <spring-boot-starter-web.version>1.3.5.RELEASE</spring-boot-starter-web.version>
         <spring-test.version>4.2.4.RELEASE</spring-test.version>
-        <json-io.version>4.4.0</json-io.version>
         <h2.version>1.4.192</h2.version>
         <hibernate-core.version>5.2.0.Final</hibernate-core.version>
     </properties>
@@ -110,11 +110,6 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
                 <version>${spring-test.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.cedarsoftware</groupId>
-                <artifactId>json-io</artifactId>
-                <version>${json-io.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.h2database</groupId>
